# statsig-server-core

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  README.md  run
exec/: Cargo.toml
exec/src/: main.rs
statsig-cpp/: CMakeLists.txt
statsig-cpp/include/: libstatsig_ffi.h
statsig-cpp/src/: layer.h  options.cpp  options.h  statsig.cpp  statsig.h  types.h  user.cpp  user.h
statsig-cpp/tests/: CMakeLists.txt  memory_safety_test.cpp  serialization_test.cpp  statsig_e2e_test.cpp
statsig-ffi/: Cargo.toml  build.rs
statsig-ffi/include/: statsig_ffi.h
statsig-ffi/src/: data_store_c.rs  ffi_utils.rs  function_based_event_logging_adapter_c.rs  function_based_specs_adapter_c.rs  instance_manager.rs  lib.rs  observability_client_c.rs  persistent_storage_c.rs  specs_update_listener_c.rs  statsig_c.rs  statsig_http_event_logging_adapter_c.rs  statsig_http_specs_adapter_c.rs  statsig_local_file_event_logging_adapter_c.rs  statsig_local_file_specs_adapter_c.rs  statsig_metadata_c.rs  statsig_options_c.rs  statsig_user_c.rs  testing_c.rs
statsig-ffi/tests/: main.rs  test_python_bindings.rs
statsig-grpc/: Cargo.toml  build.rs
statsig-grpc/src/: lib.rs  mock_forward_proxy.rs  statsig_forward_proxy.rs  statsig_grpc_client.rs  statsig_grpc_err.rs  statsig_grpc_specs_adapter.rs
statsig-grpc/tests/: mock_forward_proxy.rs  mock_specs_update_listener.rs  specs_adapter_tests.rs  test_utils.rs
statsig-java/: Cargo.toml  build.gradle  gradle.properties
statsig-java/java/: build.gradle  gradle.properties
statsig-java/src/: jni_utils.rs  statsig_jni.rs  statsig_observability_client_jni.rs  statsig_options_jni.rs  statsig_user_jni.rs
statsig-lib/: Cargo.toml
statsig-lib/src/: async_runtime.rs  background_task.rs  client_init_response_formatter.rs  data_store_interface.rs  dcs_str.rs  hashset_with_ttl.rs  initialize_response.rs  instance_store.rs  lib.rs  macros.rs  memo_sha_256.rs  network_client.rs  output_logger.rs  sampling_processor.rs  spec_store.rs  spec_types.rs  statsig.rs  statsig_core_api_options.rs  statsig_err.rs  statsig_metadata.rs  statsig_options.rs  statsig_runtime.rs  statsig_type_factories.rs  statsig_types.rs  statsig_user.rs  statsig_user_internal.rs
statsig-lib/tests/: big_number_dcs.json  check_gate_perf_dcs.json  check_gate_tests.rs  company_id_list  curl_service_tests.rs  customized_specs_adapter_tests.rs  eval_reason_tests.rs  event_logger_tests.rs  expected_evaluation_tests.rs  exposure_tests.rs  flushing_tests.rs  gcir_tests.rs  grpc_specs_adapter_tests.rs  hashset_with_ttl_tests.rs  http_specs_adapter_tests.rs  instance_store_tests.rs  mock_event_logging_adapter.rs  mock_specs_adapter.rs  network_client_tests.rs  observability_client_usage_tests.rs  override_adapter_tests.rs  perf_tests.rs  sdk_configs_tests.rs  specs_adapter_tests.rs  statsig_local_file_event_logging_adapter_tests.rs  statsig_local_file_specs_adapter_tests.rs  test_utils.rs  typed_getters_tests.rs  user_json_tests.rs
statsig-napi/: .gitignore  .prettierrc  Cargo.toml  build.rs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
statsig-napi/__test__/: customized_adapters.test.ts  data_store.test.ts  index.spec.mjs  observability_client.test.ts
statsig-napi/codemod/: custom-error-message.js
statsig-napi/src/: IDataStore.ts  Statsig.ts  StatsigOptions.ts  StatsigUser.ts  bindings.d.ts  bindings.js  console_log.rs  data_store.rs  data_store_napi.rs  index.ts  json_utils.rs  lib.rs  observability_client.rs  observability_client_napi.rs  statsig_napi.rs  statsig_options_napi.rs  statsig_types_napi.rs  statsig_user_napi.rs
statsig-node/: Cargo.toml  README.md  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
statsig-node/npm/: aarch64-apple-darwin.package.json  aarch64-pc-windows-msvc.package.json  aarch64-unknown-linux-gnu.package.json  aarch64-unknown-linux-musl.package.json  i686-pc-windows-msvc.package.json  x86_64-apple-darwin.package.json  x86_64-pc-windows-msvc.package.json  x86_64-unknown-linux-gnu.package.json  x86_64-unknown-linux-musl.package.json
statsig-node/scripts/: patch-generated.js
statsig-node/src/: Statsig.ts  data_store_napi.rs  gcir_options_napi.rs  index.ts  lib.rs  net_provider_napi.rs  network_provider_napi.rs  observability_client_napi.rs  output_logger_napi.rs  persistent_storage_napi.rs  raw_evaluation_compat_napi.rs  sdk_event_emitter_napi.rs  statsig_core_api_options_napi.rs  statsig_metadata_napi.rs  statsig_napi.rs  statsig_options_napi.rs  statsig_result.rs  statsig_types_napi.rs  statsig_user_napi.rs
statsig-pyo3/: Cargo.toml  pyproject.toml
statsig-pyo3/.env/: pyvenv.cfg
statsig-pyo3/src/: data_store_base_py.rs  evaluation_types_py.rs  interned_store_py.rs  lib.rs  net_provider_py.rs  observability_client_base_py.rs  observability_client_py.rs  output_logger_provider_base_py.rs  pyo_utils.rs  raw_evaluation_compat_py.rs  safe_gil.rs  statsig_base_py.rs  statsig_metadata_py.rs  statsig_options_py.rs  statsig_persistent_storage_override_adapter_py.rs  statsig_py.rs  statsig_types_py.rs  statsig_user_py.rs  unit_id_py.rs  valid_primitives_py.rs
statsig-pyo3/statsig/: statsig.py
statsig-pyo3/statsig_python_core/: __init__.py  statsig_python_core.py  statsig_python_core.pyi
statsig-pyo3/tests/: fork_runner.py  mock_output_logger.py  mock_scrapi.py  profile_util.py  python_binding_benchmark.py  shutdown_sub_proc.py  test_data_store.py  test_error_boundary.py  test_experiment_group_targeting.py  test_experiment_serialization.py  test_exposure_logging.py  test_feature_gate_serialization.py  test_forking.py  test_get_autotune_list.py  test_get_dynamic_config.py  test_get_experiment_groups.py  test_initialize_with_details.py  test_interned_store_preload.py  test_layer_param_exposure_sampling.py  test_layer_serialization.py  test_observability_client.py  test_output_logger_provider.py  test_override_adapter.py  test_performance.py  test_sec_expo_as_primary.py  test_shared_statsig.py  test_shutdown.py  test_statsig.py  test_statsig_check_gate.py  test_statsig_options.py  (+6 more)
statsig-rust/: Cargo.toml  build.rs
(+1435 files in other folders)
