[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[workspace]
members = [
    "statsig-rust",
    "statsig-ffi",
    "statsig-grpc",
    "statsig-pyo3",
    "statsig-node",
    "statsig-elixir/native/statsig_elixir",
]
resolver = "2"
exclude = ["examples/rust/sample-usage", "examples/rust/perf-monitor"]

[workspace.package]
edition = "2021"
license = "ISC"
version = "0.1.0-beta.250404"
homepage = "https://statsig.com/"
authors = ["Statsig", "Daniel Loomb <daniel@statsig.com>"]
readme = "README.md"
repository = "https://github.com/statsig-io/statsig-server-core"
