[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[workspace]
members = [
    "statsig-rust",
    "statsig-ffi",
    "statsig-grpc",
    "statsig-pyo3",
    "statsig-node",
    "statsig-elixir/native/statsig_elixir",
]
resolver = "2"
exclude = [
    "examples/rust/sample-usage",
    "examples/rust/perf-monitor",
    "examples/rust/mem-bench",
]

[workspace.package]
edition = "2021"
license = "ISC"
version = "0.4.3-beta.250605"
homepage = "https://statsig.com/"
authors = ["Statsig", "Daniel Loomb <daniel@statsig.com>"]
readme = "README.md"
repository = "https://github.com/statsig-io/statsig-server-core"
