[package]
name = "exec"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
serde_json = { version = "1.0.132", features = ["preserve_order"] }
toml = "0.8.19"
ini = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
config = "0.14.1"
