[package]
name = "exec"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
serde_json = { version = "1.0.132", features = ["preserve_order"] }
toml = "0.8.19"
ini = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
config = "0.14.1"
regex = "1.11.1"
