[package]
name = "sigstat-grpc"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
tokio = { version = "1.39.1", features = ["full"] }
async-trait = "0.1.81"
tonic = "0.12.1"
prost = "0.13.1"
tonic-build = "0.12.1"
log = "0.4.22"
chrono = "0.4.38"
lazy_static = "1.5.0"

[build-dependencies]
tonic-build = "0.12.1"
