[package]
name = "sigstat"
description = "Statsig Rust SDK for usage in multi-user server environments."
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.39.1", features = ["full"] }
serde_json = { version = "1.0.125", features = ["float_roundtrip"] }
serde = { version = "1.0.204", features = ["derive"] }
chrono = "0.4.38"
regex-lite = "0.1.6"
sha2 = "0.10.8"
base64 = "0.22.1"
async-trait = "0.1.81"
curl = "0.4.47"
openssl = { version = "0.10.66", features = ["vendored"], optional = true }
log = "0.4.22"
simple_logger = "5.0.0"
lazy_static = "1.5.0"
futures = "0.3.30"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
sigstat-grpc = { path = "../statsig-grpc", version = "0.0.5-beta.4", optional = true }
bytes = "1.9.0"
flate2 = "1.0.35"
rand = "0.8.4"
file-guard = "0.2.0"
zstd = { version = "0.13.2", optional = true }

[dev-dependencies]
mockito = "1.5.0"
assert-json-diff = "2.0.2"
wiremock = "0.6.2"
more-asserts = "0.3.1"

[features]
default = []
vendored_openssl = ["openssl"]
with_grpc = ["sigstat-grpc"]
with_zstd = ["zstd"]
# [[bin]]
# name = "flush"
# path = "tests/curl_service_tests.rs"
