[package]
edition = "2021"
name = "sigstat_sigstat-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
sigstat = { path = "../statsig-lib" }
napi = { version = "2.16.8", features = ["async"] }
napi-derive = "2.16.10"
serde_json = "1.0.121"
log = {version = "0.4.22", features = ["std"]}
serde = { version = "1.0.204", features = ["derive"] }
lazy_static = "1.5.0"

[build-dependencies]
napi-build = "2.1.3"

[features]
default = []
vendored_openssl = ["sigstat/vendored_openssl"]