[package]
name = "statsig-node"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
statsig-rust = { path = "../statsig-rust", default-features = false, features = [
    "with_grpc",
    "with_zstd",
    "custom_network_provider",
] }
async-trait = "0.1.81"
napi = { version = "3.0.0-alpha.24", features = [
    "async",
    "anyhow",
    "serde-json",
] }
napi-derive = { version = "3.0.0-alpha.22", default-features = false, features = [
    "type-def",
] }

serde_json = "1.0.121"

[build-dependencies]
napi-build = { version = "2.1.4" }


[features]
default = []
