[package]
name = "statsig-node"
description = "Statsig Node.js bindings for the Statsig Core SDK."
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
parking_lot = "0.12.1"
statsig-rust = { path = "../statsig-rust", default-features = false, features = [
    "with_grpc",
    "with_zstd",
    "ffi-support",
    "reqwest",
] }
async-trait = "0.1.81"
napi = { version = "3.0.0-alpha.24", features = [
    "async",
    "anyhow",
    "serde-json",
] }
napi-derive = { version = "3.0.0-alpha.22", default-features = false, features = [
    "type-def",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.121"

[build-dependencies]
napi-build = { version = "2.1.4" }


[features]
default = []
