[package]
name = "statsig-pyo3"
edition.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "statsig_python_core"
crate-type = ["cdylib"]

[dependencies]
statsig-rust = { path = "../statsig-rust" }
pyo3 = { version = "0.23.1", features = ["abi3-py37"] }
serde_json = { version = "1.0.125", features = ["float_roundtrip"] }
