[package]
name = "statsig-pyo3"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "statsig_python_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.1", features = ["abi3-py37"] }
pyo3-stub-gen = "0.7.0"
serde_json = { version = "1.0.125", features = ["float_roundtrip"] }
statsig-rust = { path = "../statsig-rust", default-features = false, features = [
    "custom_network_provider",
] }
async-trait = "0.1.81"
serde = { version = "1.0.204", features = ["derive"] }
