[package]
name = "statsig-rust"
description = "Statsig Rust SDK for usage in multi-user server environments."
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
arc-swap = "1.7.1"
ahash = "0.8.11"
async-trait = "0.1.81"
base64 = "0.22.1"
chrono = "0.4.40"
dashmap = "6.1.0"
file-guard = "0.2.0"
flate2 = "1.0.35"
futures = "0.3.30"
lazy-regex = "3.4.1"
lazy_static = "1.5.0"
log = "0.4.22"
parking_lot = "0.12.1"
percent-encoding = "2.3.1"
rand = "0.8.4"
regex = "1.10"
reqwest = { version = "0.12.14", features = [
    "json",
    "gzip",
    "rustls-tls",
    "brotli",
], optional = true, default-features = false }
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = { version = "1.0.204", features = ["deserialize_in_place"] }
serde_json = { version = "1.0.143", features = [
    "float_roundtrip",
    "raw_value",
] }
serde_with = "3.4.0"
sha2 = "0.10.8"
sigstat-grpc = { path = "../statsig-grpc", version = "0.8.9-beta.2509161804", optional = true }
simple_logger = { version = "5.0.0" }
tokio = { version = "1.39.1", features = ["full"] }
uaparser = "0.6.4"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
zstd = { version = "0.13.2", features = ["zdict_builder"] }
[target.'cfg(target_env = "gnu")'.dependencies]
libc = "0.2"

[dev-dependencies]
mockito = "1.5.0"
assert-json-diff = "2.0.2"
wiremock = "0.6.2"
more-asserts = "0.3.1"
libc = "0.2"
serial_test = "3.2.0"

[features]
default = ["reqwest"]
custom_network_provider = []
with_grpc = ["sigstat-grpc"]
testing = []
with_zstd = []
