[package]
name = "rust-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
statsig-rust = "*"
statsig = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.9"
once_cell = "1.19.0"

[build-dependencies]
built = { version = "0.8", features = ["cargo-lock"] }
