[package]
name = "statsig_elixir"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "statsig_elixir"
crate-type = ["cdylib"]

[dependencies]
parking_lot = "0.12.1"
rustler = "0.36.1"
statsig-rust = { path = "../../../statsig-rust", features = [
    "with_zstd",
] }
tokio = { version = "1.39.1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = { version = "1.0.125", features = ["float_roundtrip"] }
serde = { version = "1.0.204", features = ["derive"] }
